[FLINK-20539][table] Add `table.legacy-nested-row-nullability` table option, port row losing nullability and losing struct kind fixes from Calcite
This closes #27158.